@@ -6,6 +6,8 @@ KERNEL_FLAVOUR = di
 KERNELIMAGEVERSION = $(KERNELVERSION)
 KERNELNAME = $(foreach ver,$(KERNELVERSION),vmlinux-$(ver))
 
+INITRD_FS = cramfs
+
 VERSIONED_SYSTEM_MAP = t
 
 arch_boot_screens:
